--- a/youtubeviewer/web/templates/homepage.html
+++ b/youtubeviewer/web/templates/homepage.html
@@ -81,7 +81,11 @@
 	<div class="container-fluid d-flex justify-content-center" id="chart_div" style="height: 500px;"></div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
+	
+	<script>window.jQuery || document.write('<script src="{{ url_for("static", filename="jquery.js") }}">\x3C/script>');</script>
+
+	<!--<script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>-->
+	
 	<script src="{{ url_for('static', filename='app.js') }}"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
 		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
